2006-10-31  Nathaniel Smith  <njs@pobox.com>

	* work.cc (perform_rename): Tweak error message that just annoyed
	me.

2006-10-26  Richard Levitte  <richard@levitte.org>

	* tests/disapproving_with_message/__driver__.lua (r_sha): New
	rudimentary test to check that disapprove with messages works.
	* testsuite.lua: Add it.

2006-10-26  Richard Levitte  <richard@levitte.org>

	* commands.cc (process_commit_message_args): Only prepend the
	message prefix is it's more than 0 characters.

2006-10-26  Richard Levitte  <richard@levitte.org>

	* cmd_ws_commit.cc (CMD(disapprove)): Make it possible to specify
	extra message lines to be added after the standard "disapprove"
	line, as well as author and date.  Makes use of the following
	change:
	* commands.cc,cmd.hh (process_commit_message_args): Add an extra
	parameter to have as a prefix of the user message.  If the prefix
	exists, there will always be a message containing it.

2006-10-24  Matthew Gregan  <kinetik@orcon.net.nz>

	* lua/lstrlib.cc: Patch for Lua 5.1.1 bug #3, from
	lua.org/bugs.html.

2006-10-24  Thomas Moschny  <thomas.moschny@gmx.de>

	* tests/db_check_(heights)/: Test the heights related checks of
	'db check'.
	* testsuite.lua: Add the test to the lists of tests.

2006-10-20  Thomas Moschny  <thomas.moschny@gmx.de>

	* database_check.cc: Add checks for the heights. It is checked
	that every revision has a unique height that is greater than that
	of all it's parents.

2006-10-09  Nathaniel Smith  <njs@pobox.com>

	* automate.cc: Remove spurious #include of rev_height.hh.
	* revision.cc (allrevs_toposorted): Add a comment describing this
	function's purpose.

2006-10-24  Timothy Brownawell  <tbrownaw@gmail.com>

	Fix an epoch refinement bug. If we already have an epoch for a branch
	we're receiving and don't have any revisions for, we will be re-sent
	that epoch. There is code to ignore received items that we already
	have. This code needs to call maybe_note_epochs_finished() for
	epoch items.
